# simulation_timeseries_optim

./: .gitignore  GPU_OPTIMIZATION_README.md  README.md  mtz_to_parquet.py  pearson_target.py  pixi.toml  pyproject.toml
simulation_timeseries_optim/: __init__.py  batched_train.py  dropping.py  io.py  main.py  metrics.py  models.py  state.py  train.py  visualization.py
tests/: test_core.py  test_dropping.py  test_io.py  test_metrics.py  test_subsampling.py  test_train.py
